Fix failing color contrast

--- a/app/styles/bailwind.css
+++ b/app/styles/bailwind.css
@@ -22,7 +22,7 @@
 }
 
 .__mutation_code pre {
-  @apply h-[50vh] overflow-hidden bg-gray-800 py-2 sm:py-4;
+  @apply h-[50vh] bg-[#252525] py-2 sm:py-4;
 
   & .codeblock-line {
     @apply relative block px-2 leading-relaxed sm:px-8;
@@ -35,7 +35,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    background: theme("colors.green.brand");
-    opacity: 0.2;
+    background: theme("colors.green.500");
+    opacity: 0.125;
   }
 }
