--- a/app/styles/md.css
+++ b/app/styles/md.css
@@ -2,32 +2,32 @@
   --base00: theme("colors.gray.50");
   --base01: theme("colors.gray.200");
   --base02: theme("colors.gray.300");
-  --base03: theme("colors.gray.400");
+  --base03: theme("colors.gray.500");
   --base04: theme("colors.gray.500");
   --base05: theme("colors.gray.600");
   --base06: theme("colors.gray.700");
   --base07: theme("colors.gray.800");
   --base08: theme("colors.red.700");
-  --base09: theme("colors.pink.brand");
-  --base0A: theme("colors.blue.brand");
-  --base0B: theme("colors.green.500");
+  --base09: theme("colors.pink.700");
+  --base0A: theme("colors.blue.700");
+  --base0B: theme("colors.green.700");
   --base0C: theme("colors.aqua.brand");
   --base0D: theme("colors.blue.700");
-  --base0E: theme("colors.pink.brand");
+  --base0E: theme("colors.pink.700");
   --base0F: theme("colors.gray.700");
 
   &:where(.dark) {
     --base00: theme("colors.gray.800");
     --base01: theme("colors.gray.700");
     --base02: theme("colors.gray.600");
-    --base03: theme("colors.gray.500");
+    --base03: theme("colors.gray.400");
     --base04: theme("colors.gray.400");
     --base05: theme("colors.gray.300");
     --base06: theme("colors.gray.200");
     --base07: theme("colors.gray.100");
     --base08: theme("colors.yellow.brand");
-    --base09: theme("colors.pink.brand");
-    --base0A: theme("colors.blue.brand");
+    --base09: theme("colors.pink.400");
+    --base0A: theme("colors.blue.600");
     --base0B: theme("colors.green.brand");
     --base0C: theme("colors.aqua.300");
     --base0D: theme("colors.blue.300");
@@ -272,7 +272,7 @@
 
   & .codeblock-line[data-highlight="true"]::after {
     content: " ";
-    @apply pointer-events-none absolute left-0 right-0 top-0 -mx-3 bg-green-400 opacity-10 dark:bg-green-600;
+    @apply pointer-events-none absolute left-0 right-0 top-0 -mx-3 bg-green-400 opacity-10 dark:bg-green-500;
   }
 
   & :is(h1, h2, h3, h4, h5, h6) {
